--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,21 +11,21 @@
         <nav class="menu">
             <div class="container">
                 <div class="logo">
-                    <img src="imagens/icone-jeux-et-jeux-video-violet.png" alt="Logo" width="25%" height="25%">
+                    <img src="img/2913092.png" alt="Logo" width="25%" height="25%">
                 </div>
                 <nav>
                 <div class="menu">
-                    <a href="#home" class="btn-15">Início</a>
-                    <a href="#produtos" class="btn-15">Produtos</a>
-                    <a href="#doacao" class="btn-15">Doação</a>
-                    <a href="#contato" class="btn-15">Contato</a>
+                    <li style=" display: inline-block;"><a href="#home" class="btn-15">Início</a></li>
+                    <li style=" display: inline-block;"><a href="#produtos" class="btn-15">Produtos</a></li>
+                    <li style=" display: inline-block;"><a href="#doacao" class="btn-15">Doação</a></li>
+                    <li style=" display: inline-block;"><a href="#contato" class="btn-15">Contato</a></li> 
                 </div>
         </nav>
     </header>
     <section>
         <br><br><br>
 
-    <h1>PROJETO DOAÇÃO DE ALIMENTOS</h1>
+    <h1 id="home">PROJETO DOAÇÃO DE ALIMENTOS</h1>
     <div><br><br>
         <p>Doe Alimentos é um projeto que visa ajudar pessoas em situação de vulnerabilidade social.</p>
         <p>Com a sua ajuda, podemos fazer a diferença na vida de muitas pessoas.</p>
@@ -82,7 +82,7 @@
         <section class="produtos">
 
             <br><br>
-            <h1>FORMAS DE DOAR</h1>
+            <h1 id="produtos">FORMAS DE DOAR</h1>
             <p>Doando por transferência bancária, pix, levando até o responsável.</p>
 
             <br><br>
@@ -120,9 +120,9 @@
         <p>Pix | Chave CNPJ: </p>
 
         <br><br>
-        <h1>CONTATOS E LOCALIZAÇÃO</h1>
-        <p>Telefone: (11) 99999-9999</p>
-        <p>Endereço: Rua Antônio Registro, nº </p>
+        <h1 id="contato">CONTATOS E LOCALIZAÇÃO</h1>
+        <p>Telefone: (43) 99999-9999</p>
+        <p>Endereço: Rua Saturnino Pires de Godoy, nº </p>
 
         <!-- mapa --><br><br>
         <h1>Localização</h1>
@@ -131,10 +131,11 @@
 
         <br><br><br><br>
 
-
-
     <footer>
         <p>&copy; 2025, Capela São José. Doe Alimentos</p>
+        <div class="logo">
+            <img src="img/2913092.png" alt="Logo" width="25%" height="25%">
+        </div>
     </footer>
 
     <script src="script.js"></script>
