Últimos ajustes no site
Como o projeto acabou e para  adicionei um telefone, pix e conta bancárias falsas para adicionar ao GitHub.

--- a/index.html
+++ b/index.html
@@ -112,17 +112,16 @@
         <h1>OUTRAS FORMAS</h1>
         <br>
 
-        <p>Você também pode doar via transferência bancária.</p>
+        <p>Você também pode doar via transferência bancária ou PIX.</p>
         <br>
-        <p>Banco do Brasil | Agência:  | Conta Corrente: </p>
-        <p>Banco Itaú | Agência:  | Conta Corrente: </p>
-        <p>Banco Santander | Agência: | Conta Corrente: </p>
-        <p>Pix | Chave CNPJ: </p>
+        
+        <p>Banco Santander | Agência: | Conta Corrente: 948564</p>
+        <p>Pix | Chave CNPJ: 199.999.999-99</p>
 
         <br><br>
         <h1 id="contato">CONTATOS E LOCALIZAÇÃO</h1>
-        <p>Telefone: (43) 99999-9999</p>
-        <p>Endereço: Rua Saturnino Pires de Godoy, nº </p>
+        <p>Telefone: (43) 99999-9999.</p>
+        <p>Endereço: Rua João Carlos de Farias, 100.</p>
 
         <!-- mapa --><br><br>
         <h1>Localização</h1>
@@ -132,7 +131,7 @@
         <br><br><br><br>
 
     <footer>
-        <p>&copy; 2025, Capela São José. Doe Alimentos</p>
+        <p>&copy; 2025, Comunidade São José. Doe Alimentos</p>
         <div class="logo">
             <img src="img/2913092.png" alt="Logo" width="25%" height="25%">
         </div>
